LIST OF CHANGES FROM LAST RELEASE:			<$Revision: 1.1060 $>


[Note: This file does not mention every change made to the NetBSD source tree.
For an exhaustive list, please subscribe to the `source-changes' mailing list,
or see the mailing list archives.  For more information, send a message
containing just the word `help' to `majordomo@NetBSD.org'.]

------------------------------------------------------------------------------
PLEASE USE THE FOLLOWING STYLE WHEN ADDING ITEMS:

	theme: Content ...
		more content ...
		more content. [developer DATE-FORMAT]

That's it, one tab to start an item, and two tabs to indent the content.
Also please start the content with a capital and end it with a dot.

This is very important for the www scripts, otherwise it won't be able to
parse the file and the HTML output will be mangled.
------------------------------------------------------------------------------


Changes from NetBSD 4.0 to NetBSD 5.0:
	evbppc: Add support for Xilinx Virtex II-Pro/4-FX. [freza 20061202]
	mac68k: Add support for four more Nubus video cards, including the
		VillageTronic MacPicasso 340. [hauke 20061206]
	ixp425: Add support for NPE Ethernet. [scw 20061210]
	nfs: Remove NQNFS support from kernel. [yamt 20061227]
	mount_psshfs(8): Add puffs sshfs. [pooka 20061229]
	zaurus: Add support for Sharp C3x00 PDA. [ober 20070105]
	i386: Add support for Microsoft Xbox. [jmcneill 20070105]
	ntp: Import ntp 4.2.4 (20061228). Tracking of network interface
		address changes is now supported - no more ntpd
		restarts when interface addresses are re-configured
		(WLAN/DSL/ppp/...). [kardel 20070106]
	kernel: Global 'securelevel' variable removed; it is now internal to
		the secmodel. [elad 20070110]
	gcc(1): Updated to version 4.1.2-20070110. [mrg 20070111]
	acpitools: Added from FreeBSD via fvdl. [christos 20070114]
	scsictl(8): Added setspeed command, to set the highest speed that the
		optical drive should use for reading data,